telecom-training.yaml
apiVersion: apps/v1                                                                                                                                                                           
kind: Deployment                                                                                                                                                                              
metadata:                                                                                                                                                                                     
  labels:                                                                                                                                                                                     
    app: telecom-training
  name: telecom-training
  namespace: default
spec:                                                                                                                                                                                         
  progressDeadlineSeconds: 600                                                                                                                                                                
  replicas: 3                                                                                                                                                                                 
  revisionHistoryLimit: 10                                                                                                                                                                    
  selector:
    matchLabels:
      app: telecom-training
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: telecom-training
    spec:
      containers:
      - image: "eu.gcr.io/telecom-training/server:v1.0.0"
        imagePullPolicy: Always
        name: telecom-training
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: telecom-training
  name: telecom-training
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  # - IPv6
  # ipFamilyPolicy: PreferDualStack
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: telecom-training
  sessionAffinity: None
  type: NodePort
