demo-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - image: "mongo-express"
        imagePullPolicy: Always
        name: mongo-express
        resources:
          limits:
            memory: "128M"
            cpu: "1000m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-db
  name: mongo-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - image: "mongo"
        imagePullPolicy: Always
        name: mongo-db
        resources:
          limits:
            memory: "128M"
            cpu: "1000m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express-cip
  namespace: default
spec:
  ports:
  - # Exposed service port
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongo-express

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-db
  name: mongo-db-cip
  namespace: default
spec:
  ports:
  - # Exposed service port
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo-db

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-db-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # Specify which Ingress Controller to be used
  ingressClassName: nginx
  rules:
  - host: mongodb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-cip
            port:
              # Exposed service port
              number: 8081
